[package]
name = "bancuh-dns"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
addr = "0.15.6"
anyhow = "1.0.75"
arc-swap = "1"
async-trait = "0.1.74"
clap = { version = "4.4.11", features = ["derive", "env"] }
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
governor = "0.8"
hickory-resolver = "0.25"
hickory-server = { version = "0.25", features = ["https-aws-lc-rs"] }
rustls = "0.23"
rustls-acme = { version = "0.15", features = ["tokio", "tower"] }
idna = "0.5.0"
itertools = "0.14"
lazy_static = "1.4.0"
rand = "0.9"
regex = "1.10.2"
reqwest = { version = "0.13", default-features = false, features = ["json"] }
rocksdb = "0.24.0"
serde = { version ="1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.27"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["rt"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.0"

[features]
default = ["rustls-tls"]
default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls"]
